# OpenBattlesim

./: .gitignore  BoidController.gd  LICENSE  README.md  day_shader_tracker.gd  export_presets.cfg  icon.svg.import  maploader.gdextension  obtl.gdextension  project.godot  r_climate.gdextension  r_erosion.gdextension  r_sat.gdextension  r_scenario.gdextension  r_vegetation.gdextension  sun_movement.gd  terrain_test.gd  test_scene.tscn  test_water_shader.tres  world.gd  world.tscn
addons/arrow3d/: arrow_3d.gd  arrow_3d.png.import  arrow_3d.svg.import
addons/dynamic_day_night_cycles/: custom_eot.gd  daytime_shader.tres
addons/fastnoiselite_tool/: noise_generator.gd  noise_generator.tscn  noise_generator_theme.tres  noise_resource.gd  texture_generation.gd  texture_generation.tscn  vector3_input.gd  vector3_input.tscn
addons/gpu_computer/: gpu_computer.gd  gpu_computer.tscn
addons/m_terrain/: start.gdshader
addons/onscreen_output/: LICENSE.txt  README.md  main_panel.gd  main_panel.tscn  output.gd  output.tscn  plugin.cfg  plugin.gd
boids/: boid_compute.glsl  boid_compute_old.glsl
core/maploader/: Cargo.toml
core/maploader/src/: lib.rs
core/obtl/: Cargo.toml  test.act
core/obtl/src/: datatype.rs  grammar.pest  lib.rs  main.rs  parser.rs  syntax.rs  token.rs
data/debug/: enviro.tres  global.gd  graph.tres  init.gd  new_shader_material.tres  sce3D77.tmp  scene_test.tscn  soil_selection_mid.tres  soil_selection_start.tres  terrain.gd  test_generator.gd
data/font/: Helvetica-Bold.ttf.import  Helvetica-BoldOblique.ttf.import  Helvetica.ttf.import  Museo Sans 700.ttf.import  PIXEAB__.TTF.import  PIXEARG_.TTF.import  ProggyVector-Regular.ttf.import
data/icon/: icon_32x32.png.import
data/icons/: splash_screen.psd
data/splash/: splash_screen.png.import  splash_screen.psd
data/theme/: Classic95.tres  retro_theme.tres
data/vegetation_raw_data/: bioms.yml  map.yml  soil_types.yml  vegetation_types.yml
modules/r_climate/: Cargo.toml
modules/r_climate/src/: climate.rs  gendata.rs  grid.rs  lib.rs
modules/r_erosion/: Cargo.toml
modules/r_sat/: Cargo.toml
modules/r_sat/src/: lib.rs  main.rs  tex.rs
modules/r_scenario/: Cargo.toml
modules/r_scenario/src/: entry_point.rs  erosion.rs  lib.rs
modules/r_terrain/: Cargo.toml
modules/r_vegetation/: Cargo.toml
modules/r_vegetation/data/: maps.yml  vegetation_types.yaml  vegetation_types.yml
modules/r_vegetation/src/: config.rs  edaphology.rs  entry_point.rs  hydrology.rs  insolation.rs  lib.rs  main.rs  orography.rs  probabilities.rs
modules/src/: lib.rs  main.rs
plugins/arrow_3d-2036b6913b553e60197979a623ebfeffc9256790/: README.md  icon.svg.import  main.tscn  project.godot
plugins/godot-free-look-camera-132062011edfce9399a489756064cfea880dad4c/: free_look_camera.gd
r_erosion/: Cargo.toml  main.py
r_erosion/src/: climate.rs  entry_point.rs  erosion.rs  lib.rs  normal_gen.rs
r_tex/: Cargo.toml
r_tex/src/: lib.rs
r_texture/: Cargo.toml
r_texture/src/: lib.rs
r_tile_processor/: Cargo.toml
r_tile_processor/src/: data_generation.rs  lib.rs  terrain_tile.rs  weather_grid.rs
resources/: diurnal_temp_curve.tres  material_placeholder.tres  plane_placeholder.tres  terrain.material  terrain_shader.tres
scenes/: create_scenario.tscn  generation_scene.tscn  main_menu.tscn  scenario.tscn  scenario_env.tres  terrain.gd  terrain_loader.gd  test.tscn
scripts/: DebugDisplay.gd  Grid.gd  day_shader_tracker.gd  free_look_camera.gd  grid_component.gd  simulation.gd  sun_movement.gd  terrain_loader.gd  terrain_test.gd  vegetation_scatterer.gd  vegetation_test.gd
scripts/global/: global_init.gd
scripts/ui/: BiomeSelection.gd  BiomeStringSelector.gd  CycleSelection.gd  GenSceneControl.gd  GenerateButton.gd  SeedSelection.gd  TerrainSelection.gd  ui_gen_data.gd
terrain/: eroded_lvl1.png.import
tile_tex/lvl1/: data.hterrain  discharge_0_0.png.import  discharge_0_1.png.import  discharge_0_10.png.import  discharge_0_11.png.import  discharge_0_12.png.import  discharge_0_13.png.import  discharge_0_14.png.import  discharge_0_15.png.import  discharge_0_2.png.import  discharge_0_3.png.import  discharge_0_4.png.import  discharge_0_5.png.import  discharge_0_6.png.import  discharge_0_7.png.import  discharge_0_8.png.import  discharge_0_9.png.import  discharge_10_0.png.import  discharge_10_1.png.import  discharge_10_10.png.import  discharge_10_11.png.import  discharge_10_12.png.import  discharge_10_13.png.import  discharge_10_14.png.import  discharge_10_15.png.import  discharge_10_2.png.import  discharge_10_3.png.import  discharge_10_4.png.import  discharge_10_5.png.import  discharge_10_6.png.import  discharge_10_7.png.import  (+995 more)
tools/: build_script_move.ps1
ui/: main_screen.tscn  welcome_screen.tscn
(+103 files in other folders)
