[package]
name = "r_erosion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
errorfunctions = "0.2.0"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
nalgebra = "0.32.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
image_normal = { package = "image", version = "0.23.14" }
image_latest = { package = "image", version = "0.24.6" }
normal-heights = "0.1.2"
imageproc = "0.23.0"
