[package]
name = "r_climate"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
nalgebra = "0.32.3"
image = "0.24.7"
serde = { version = "1.0.183", features = ["derive"] }
rand = "0.8.5"
noise_rs = "0.1.16"
noise = "0.8.2"
ron = "0.8.1"
