[package]
name = "r_scenario"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
errorfunctions = "0.2.0"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
nalgebra = "0.32.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
image_normal = { package = "image", version = "0.23.14" }
image_latest = { package = "image", version = "0.24.6" }
imageproc = "0.23.0"
fs_extra = "1.3.0"

